# socket_o

./: .gitignore  CMakeLists.txt  test.cpp
src/: check.cpp  check.h  const.h  error.h  remote.h  tcp.cpp  tcp.h
test/: test_check.cpp  test_check.h  test_start.cpp
